--- a/jonas/complete-javascript-course-master/04-HTML-CSS/final/index.html
+++ b/jonas/complete-javascript-course-master/04-HTML-CSS/final/index.html
@@ -9,7 +9,7 @@
     <title>Learning HTML & CSS</title>
   </head>
   <body>
-    <h1>JavaScript is fun, but so is HTML & CSS!</h1>
+    <h1>JavaScript is fun, but so is HTML & CSS</h1>
     <p class="first">
       You can learn JavaScript without HTML and CSS, but for DOM manipulation
       it's useful to have some basic ideas of HTML & CSS. You can learn more
@@ -19,7 +19,7 @@
 
     <h2>Another heading</h2>
     <p class="second">
-      Just another paragraph
+      Just another paragraphs
     </p>
 
     <img
